fixed white space at great time expense

--- a/css/index.css
+++ b/css/index.css
@@ -121,9 +121,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-* {
-  box-sizing: border-box;
-}
 html {
   font-size: 62.5%;
 }
@@ -159,14 +156,14 @@ img {
   height: auto;
 }
 .container {
-  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
 }
 h4 {
   display: flex;
   flex-wrap: nowrap;
-  width: 20rem;
   color: white;
+  padding: 0rem 4rem 0rem 2rem;
 }
 .navigator {
   background-color: #175517;
@@ -174,27 +171,30 @@ h4 {
 .inNav {
   background-color: rgba(0, 7, 1, 0.2);
 }
-nav {
+.linksAll {
   display: flex;
+  justify-content: space-between;
   flex-wrap: nowrap;
   align-items: baseline;
-  padding: 1rem;
+  width: 100%;
 }
-nav a {
+.linksAll .linksRight {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: baseline;
+}
+.linksAll .linksLeft {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: baseline;
+}
+.linksAll a {
   color: white;
   font-size: 2rem;
-  width: 15rem;
   text-decoration: none;
-}
-nav .linksLeft {
-  display: flex;
-  justify-content: flex-start;
-  padding-left: 5rem;
-}
-nav .linksRight {
-  display: flex;
-  justify-content: flex-end;
-  padding-left: 47rem;
+  padding: 2rem;
 }
 .container {
   margin: 0 auto;
@@ -246,10 +246,9 @@ nav .linksRight {
 .boxes {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   width: 100%;
-  background-image: url(https://i.pinimg.com/originals/68/45/f8/6845f840bcea7dd32e05a45977e2fd35.jpg);
 }
 .boxes .box9 {
   margin-top: 5%;
@@ -284,18 +283,15 @@ nav .linksRight {
   margin-right: 10%;
 }
 img {
-  height: 15rem;
-  width: 15rem;
+  height: 20%;
+  width: 20%;
 }
 .pics {
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 100%;
+  width: 20%;
 }
 .names {
-  display: flex;
-  justify-content: center;
   font-size: 2rem;
   padding-top: 1rem;
   color: white;
@@ -303,16 +299,12 @@ img {
   font-weight: bolder;
 }
 .titles {
-  display: flex;
-  justify-content: center;
   font-size: 2rem;
   color: white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   font-weight: bolder;
 }
 .descrip {
-  display: flex;
-  justify-content: center;
   font-size: 2rem;
   padding-bottom: 4rem;
   color: white;
