--- a/less/about.less
+++ b/less/about.less
@@ -1,10 +1,10 @@
 .boxes {
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-    background-image: url(https://i.pinimg.com/originals/68/45/f8/6845f840bcea7dd32e05a45977e2fd35.jpg);
+    // background-image: url(https://i.pinimg.com/originals/68/45/f8/6845f840bcea7dd32e05a45977e2fd35.jpg);
     .box9 {
         margin-top: 5%;
         margin-left: 20%;
@@ -39,18 +39,15 @@
     }
 }
 img {
-    height: 15rem;
-    width: 15rem;
+    height: 20%;
+    width: 20%;
 }
 .pics{
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
+    width: 20%;
 }
 .names {
-    display: flex;
-    justify-content: center;
     font-size: 2rem;
     padding-top: 1rem;
     color: white;
@@ -58,16 +55,12 @@ img {
     font-weight: bolder;
 }
 .titles {
-    display: flex;
-    justify-content: center;
     font-size: 2rem;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     font-weight: bolder;
 }
 .descrip {
-    display: flex;
-    justify-content: center;
     font-size: 2rem;
     padding-bottom: 4rem;
     color: white;
