--- a/less/global.less
+++ b/less/global.less
@@ -1,9 +1,7 @@
-* {
-    box-sizing: border-box;
-  }
   
   html {
     font-size: 62.5%;
+    
   }
   
   html, body {
@@ -40,6 +38,6 @@
   }
   
   .container {
-    width: 100%;
+    max-width: 100%;
     margin: 0 auto;
   }
