--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,8 @@
 h4 {
     display: flex;
     flex-wrap: nowrap;
-    width:20rem;
     color: white;
+    padding: 0rem 4rem 0rem 2rem;
 }
 .navigator {
     background-color: rgb(23, 85, 23);
@@ -10,26 +10,30 @@ h4 {
 .inNav {
     background-color: rgba(0, 7, 1, 0.2);
 }
-nav {
+.linksAll {
     display: flex;
+    justify-content: space-between;
     flex-wrap: nowrap;
     align-items: baseline;
-    padding: 1rem;
-    a {
-        color: white;
-        font-size: 2rem;
-        width: 15rem;
-        text-decoration: none;
+    width: 100%;
+    .linksRight {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: baseline;
     }
     .linksLeft {
         display: flex;
-        justify-content: flex-start;
-        padding-left: 5rem;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: baseline;
     }
-    .linksRight {
-        display: flex;
-        justify-content: flex-end;
-        padding-left: 47rem;
+    a {
+        color: white;
+        font-size: 2rem;
+        text-decoration: none;
+        padding: 2rem;
     }
 }
+
 
